--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="styles.css"/>
-    <title>Hunter Sign-up</title>
+    <script src="./script.js" defer></script>
+    <title>Sign-up for something!</title>
 </head>
 <body>
     <div class="left-container">
@@ -24,33 +25,45 @@
         </div>
         <div>
             <p>Let's do this!</p>
-            <div class="input-grid">
-                <fieldset class="row-one-inputs">
-                    <label for="first-name">FIRST NAME</label>
-                    <input id="first-name" name="first-name" type="text">
-                    <label for="last-name">LAST NAME</label>
-                    <input id="last-name" name="last-name" type="text">
-                </fieldset> 
-                <fieldset class="row-two-inputs">
-                    <label for="email"></label>
-                    <input id="email" name="email" type="email">
-                    <label for="phone-number">PHONE NUMBER</label>
-                    <input id="phone-number" name="phone-number" type="tel">
-                </fieldset>
-                <fieldset class="row-three-inputs">
-                    <label for="password">PASSWORD</label>
-                    <input id="password" name="password" type="password">
-                    <label for="confirm-password">CONFIRM PASSWORD</label>
-                    <input id="confirm-password" name="confirm-password" type="password">
-                </fieldset>
-            </div>
+            <fieldset class="input-grid">
+                    <div class="wrapper">
+                        <div class="input-wrap">
+                            <label for="first-name">FIRST NAME</label>
+                            <input id="first-name" name="first-name" type="text" maxlength="20" required>
+                        </div>
+                        <div class="input-wrap">
+                            <label for="last-name">LAST NAME</label>
+                            <input id="last-name" name="last-name" type="text" maxlength="20" required>
+                        </div>
+                    </div>
+                    <div class="wrapper">
+                        <div class="input-wrap">
+                            <label for="email">EMAIL</label>
+                            <input id="email" name="email" type="email" required>
+                        </div>
+                        <div class="input-wrap">
+                            <label for="phone-number">PHONE NUMBER</label>
+                            <input id="phone-number" name="phone-number" type="tel">
+                        </div>
+                    </div>
+                    <div class="wrapper">
+                        <div class="input-wrap">
+                            <label for="password">PASSWORD</label>
+                            <input id="password" name="password" type="password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" required>
+                            <span id="after-password"></span>
+                        </div>
+                        <div class="input-wrap">
+                            <label for="confirm-password">PASSWORD CONFIRMATION</label>
+                            <input id="confirm-password" name="confirm-password" type="password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" required>
+                        </div>
+                    </div>
+            </fieldset>
         </div>
         <div> 
-            <button type="submit" class="button">Create Account</button>
+            <button type="submit" id="button">Create Account</button>
             <p>Already have an account? <a href="">Log in</a></p>
         </div>
     </form>
-    
 </body>
 </html>
 
